apport (0.135) UNRELEASED; urgency=low

  * problem_report.py, test_write_mime_text(): Add test cases for
    single-line and two-line UTF-8 values, single-line and two-line
    Unicode values and a single-line LF-terminated value. Fix handling
    of the latter two.
  * debian/local/apport-collect: Collect package, OS, and user
    information as well. (LP: #332578)
  * package-hooks/source_apport.py: Robustify by using hookutils, and
    avoid stat errors if /var/crash/* does not exist.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 23 Feb 2009 12:59:41 +0100

apport (0.134) jaunty; urgency=low

  * debian/local/apport-collect: Do not collect information for closed
    tasks. Thanks for Brian Murray for the initial patch! (LP: #331839)
  * apport/crashdb_impl/launchpad.py, download(): Download
    DpkgTerminalLog.txt attachment as well.
  * apport/report.py: If downloading a nonexisting bug pattern file
    name succeeds and returns a HTML snippet with "404 Not Found",
    consider this as failure. This repairs falling back to source
    package names. (LP: #328751)
  * apport/hookutils.py: Replace tabs with spaces.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 20 Feb 2009 11:22:15 +0100

apport (0.133) jaunty; urgency=low

  [ Andy Whitcroft ]
  * apport/hookutils.py: define and include a machine type from the hardware
    information in the report, using HAL information where available.
  * bin/apportcheckresume: include the machine type in the suspend/hibernate
    report title.  They are generally machine specific.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 19 Feb 2009 17:49:03 +0100

apport (0.132) jaunty; urgency=low

  [ Martin Pitt ]
  * Add debian/local/apport-collect: Download a Launchpad bug report,
    get its source package, check if it has apport hooks, and if so,
    run and upload them. Add manpage, too. (LP: #124338)
  * debian/control: Add Suggests: python-launchpadlib; this is only