@@ -4,12 +4,15 @@ apport (0.135) UNRELEASED; urgency=low
     single-line and two-line UTF-8 values, single-line and two-line
     Unicode values and a single-line LF-terminated value. Fix handling
     of the latter two.
+  * problem_report.py, test_write(): Add test cases for single-line
+    and two-line UTF-8 and Unicode values, and fix handling of these
+    in write().
   * debian/local/apport-collect: Collect package, OS, and user
     information as well. (LP: #332578)
   * package-hooks/source_apport.py: Robustify by using hookutils, and
     avoid stat errors if /var/crash/* does not exist.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 23 Feb 2009 12:59:41 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 23 Feb 2009 13:07:53 +0100
 
 apport (0.134) jaunty; urgency=low
 
